<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.0</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>com.isec</groupId>
    <artifactId>motor-insurance-platform</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>motor-insurance-platform</name>
    <description>Motor Insurance Platform - Modular Monolith</description>

    <properties>
        <java.version>17</java.version>
        <spring-boot.version>3.3.0</spring-boot.version>
        <spring-cloud.version>2023.0.1</spring-cloud.version>
        <aws.sdk.version>2.25.27</aws.sdk.version>
        <openpdf.version>2.0.2</openpdf.version>
    </properties>

    <modules>
        <module>common</module>
        <module>messaging</module>
        <module>modules/identity</module>
        <module>modules/applications</module>
        <module>modules/rating</module>
        <module>modules/documents</module>
        <module>modules/payments</module>
        <module>modules/policies</module>
        <module>modules/certificates</module>
        <module>modules/notifications</module>
        <module>modules/reporting</module>
        <module>modules/audit</module>
        <module>modules/integrations</module>
        <module>modules/customers</module>
        <module>modules/vehicles</module>
        <module>modules/reactive-commons-infra</module>
        <module>app-bootstrap</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>software.amazon.awssdk</groupId>
                <artifactId>bom</artifactId>
                <version>${aws.sdk.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.github.librepdf</groupId>
                <artifactId>openpdf</artifactId>
                <version>${openpdf.version}</version>
            </dependency>
            <!-- Internal Module Versions -->
            <dependency>
                <groupId>com.isec</groupId>
                <artifactId>common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.isec</groupId>
                <artifactId>messaging</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.isec</groupId>
                <artifactId>identity</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.isec</groupId>
                <artifactId>applications</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.isec</groupId>
                <artifactId>rating</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.isec</groupId>
                <artifactId>documents</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.isec</groupId>
                <artifactId>payments</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.isec</groupId>
                <artifactId>policies</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.isec</groupId>
                <artifactId>certificates</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.isec</groupId>
                <artifactId>notifications</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.isec</groupId>
                <artifactId>reporting</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.isec</groupId>
                <artifactId>audit</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.isec</groupId>
                <artifactId>integrations</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.isec</groupId>
                <artifactId>customers</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.isec</groupId>
                <artifactId>vehicles</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.isec</groupId>
                <artifactId>reactive-commons-infra</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!-- Managed Spring Boot Starters -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-data-redis-reactive</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-data-r2dbc</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-webflux</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-security</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-redis-reactive</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-r2dbc</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webflux</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
        </dependency>
        <dependency>
            <groupId>org.liquibase</groupId>
            <artifactId>liquibase-core</artifactId>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>r2dbc-postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.data</groupId>
            <artifactId>spring-data-relational</artifactId>
        </dependency>
        <dependency>
            <groupId>io.projectreactor</groupId>
            <artifactId>reactor-core</artifactId>
        </dependency>
        <dependency>
            <groupId>io.projectreactor</groupId>
            <artifactId>reactor-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>
